2005-03-09  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/totem-preferences.c: (visual_menu_changed): simple warning fix

2005-03-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (totem_pl_parser_check_utf8): g_utf8_validate
	can't take a NULL string... (Closes: #169558)

2005-03-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (totem_pl_parser_check_utf8): remove useless
	debug

2005-03-07  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (totem_pl_parser_check_utf8),
	(totem_pl_parser_add_one_url), (totem_pl_parser_add_one_url_ext):
	Don't pass on the titles if they're not in UTF-8 (Closes: #168968)

2005-03-07  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (update_seekable): set the seekable member properly,
	makes the "Skip to..." dialog work again (Closes: #169255)

2005-03-07  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (mediadev_changed_cb),
	(visual_menu_changed), (totem_setup_preferences),
	(totem_preferences_visuals_setup): Fix memory leak, patch by Aivars
	Kalvans <aivars.kalvans@inbox.lv> (Closes: #169425)

2005-03-07  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (totem_pl_parser_add_smil): Fix memory
	leak, patch by Aivars Kalvans <aivars.kalvans@inbox.lv>
	(Closes: #169431)

2005-03-07  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (setup_config),
	(bacon_video_widget_set_media_device),
	(bacon_video_widget_set_proprietary_plugins_path),
	(bacon_video_widget_set_tv_out),
	(bacon_video_widget_set_video_device): fix memory leaks,
	adapted from patch by Aivars Kalvans <aivars.kalvans@inbox.lv>
	(Closes: #169437)

2005-03-07  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c: (totem_uri_get_subtitle_uri): fix memory leak,
	patch by Aivars Kalvans <aivars.kalvans@inbox.lv> (Closes: #169440)

2005-03-07  Bastien Nocera  <hadess@hadess.net>

	* data/totem.desktop.in.in.in: allow multiple URIs to be passed