@@ -58,7 +58,6 @@
 
 #include "bacon-video-widget.h"
 #include "baconvideowidget-marshal.h"
-#include "scrsaver.h"
 #include "video-utils.h"
 #include "gstscreenshot.h"
 
