@@ -1,3 +1,11 @@
+2005-03-10  Bastien Nocera  <hadess@hadess.net>
+
+	* src/Makefile.am:
+	* src/bacon-video-widget-gst.c:
+	* src/bacon-video-widget-xine.c:
+	* src/totem-private.h:
+	* src/totem-scrsaver.c: renamed scrsaver.[ch] to totem-scrsaver.[ch]
+
 2005-03-09  Bastien Nocera  <hadess@hadess.net>
 
 	* NEWS: upd
